syntax = "proto3";
import "google/protobuf/timestamp.proto";
option csharp_namespace = "Appointment.API.Protos";
package appointment;

service AppointmentBookingApi {
	rpc SetAppointmentBooking (SetAppointInfor) returns (SetAppointResponse){}
	rpc GetListAppointRegisted (SetAppointResponse) returns (ListAppointRegistedResponse){}
}

message ListAppointRegistedResponse {
	repeated ListAppointRegisted ListAppointRegisRe = 1;
}

message ListAppointRegisted {
	int32 id = 1;
	string nameDoctor = 2;
	string namePation = 3;
	string status = 4;
	string selectedDate = 5;
	string optionDate = 6;
}

message SetAppointInfor {
	int32 selectedId = 1;
	string namePatient = 2;
	string description = 3;
	string selectedDate = 4;
	string optionDate = 5;
	string nameDoctor = 6;
}

message SetAppointResponse {
	int32 response = 1;
}